--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import "~antd/dist/antd.css";
+@import "./styles/Home.css";
+@import "./styles/SearchBar.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
